--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe, aliquid itaque. Quas rerum consequatur laboriosam ex sit natus nesciunt! Voluptate eligendi temporibus obcaecati quia, totam quaerat dicta voluptas nemo ad, excepturi fugit vitae, sit asperiores quidem? Alias error consequatur repudiandae eos officia quo blanditiis dolore beatae, minima ipsam quis aliquam quibusdam perferendis repellendus dolorum assumenda odit magnam vitae ea temporibus odio accusantium obcaecati. Sapiente aut unde odio at nihil molestiae ipsum dolore blanditiis delectus quo animi et ullam voluptatibus sunt illo ipsam, excepturi quibusdam sed odit quas suscipit ut! Autem accusantium soluta dolores dolore modi adipisci quidem tempore id est!</p>
                 </div>
                 <div class="section-col">
-                    <img src="/img/about-us.jpg" class="section-about-us__img"></img>
+                    <img src="img/about-us.jpg" class="section-about-us__img"></img>
                 </div>
             </div>
         </div>
@@ -110,16 +110,16 @@
                 <div class="section-col">
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
@@ -128,16 +128,16 @@
                 <div class="section-col">
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
@@ -147,16 +147,16 @@
                 <div class="section-col">
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
                     <div class="section-item">
-                        <img src="/img/2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="section-item__hover">
-                            <img src="/img/instagram.png" alt="">
+                            <img src="img/instagram.png" alt="">
                         </div>
                     </div>
 
@@ -197,7 +197,7 @@
                 </div>
 
                 <div class="section-col section-col--right">
-                    <img src="/img/contacts/1.jpg" alt="">
+                    <img src="img/contacts/1.jpg" alt="">
                 </div>
 
             </div>
@@ -217,9 +217,9 @@
                 </p>
                 <div class="social">
                     <ul class="social-menu">
-                        <li class="social-menu__item"><a href="#"><img src="/img/instagram.png" alt=""></a></li>
-                        <li class="social-menu__item"><a href="#"><img src="/img/vk.png" alt=""></a></li>
-                        <li class="social-menu__item"><a href="#"><img src="/img/whatsapp.png" alt=""></a></li>
+                        <li class="social-menu__item"><a href="#"><img src="img/instagram.png" alt=""></a></li>
+                        <li class="social-menu__item"><a href="#"><img src="img/vk.png" alt=""></a></li>
+                        <li class="social-menu__item"><a href="#"><img src="img/whatsapp.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
